# CalTrain-Synchronization-and-Mutual-Exclusion

./: CMakeLists.txt  README.md  caltrain  caltrain.c  caltrain.h  compile test run command (copy).txt  final_result.out  repeat test run command.txt
